--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,8 @@
+@import url('./layout.css');
+@import url('./Login.css');
+@import url('./ProductSearch.css');
+@import url('./toastify.css');
+
 body {
     font-family: 'Roboto', sans-serif;
 }
